--- a/src/app/Components/Evenements/addevenement/addevenement.component.html
+++ b/src/app/Components/Evenements/addevenement/addevenement.component.html
@@ -26,7 +26,7 @@
                         </p>
                         <p class='field half required'>
                           <label class='label' for='password'>Avariable Places </label>
-                          <input class='text-input' id='password' name='password' required type='number'[(ngModel)]="event.npDisponible">
+                          <input class='text-input' id='password' name='password' required type='number'[(ngModel)]="event.npMax">
                         </p>
                         <p class='field required'>
                           <label class='label'>Event Images</label>
