--- a/src/app/BackEnd/Events/stats-events/stats-events.component.html
+++ b/src/app/BackEnd/Events/stats-events/stats-events.component.html
@@ -29,117 +29,96 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-3 col-12">
                     <div class="card">
                         <div class="card-header d-flex flex-column align-items-start pb-0">
-                            <canvas baseChart width="400" height="400"
-                          [type]="'line'"
-                          [data]="ChartEvents"
-                          [options]="lineChartOptions"
-                          [legend]="lineChartLegend"
-                          [plugins]="lineChartPlugins">
-                        </canvas>
+                            <div class="avatar bg-rgba-primary p-50 m-0">
+                                <div class="avatar-content">
+                                    <i class="feather icon-users text-primary font-medium-5"></i>
+                                </div>
+                            </div>
+                            <h2 class="text-bold-700 mt-1 mb-25">{{NBE}}</h2>
+                            <p class="mb-0">Total Number Events</p>
                         </div>
                         <div class="card-content">
-                            <div><B>Total Number of</B></div>
+                            <div id="subscribe-gain-chart"></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-3 col-12">
                     <div class="card">
                         <div class="card-header d-flex flex-column align-items-start pb-0">
-                            <canvas baseChart width="400" height="400"
-                          [type]="'line'"
-                          [data]="ChartEvents"
-                          [options]="lineChartOptions"
-                          [legend]="lineChartLegend"
-                          [plugins]="lineChartPlugins">
-                        </canvas>
+                            <div class="avatar bg-rgba-primary p-50 m-0">
+                                <div class="avatar-content">
+                                    <i class="feather icon-users text-primary font-medium-5"></i>
+                                </div>
+                            </div>
+                            <h2 class="text-bold-700 mt-1 mb-25">{{NBC}}</h2>
+                            <p class="mb-0">Total Number Of Challenges</p>
+                        </div>
+                        <div class="card-content">
+                            <div id="dashboard-Formation"></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-3 col-12">
                     <div class="card">
                         <div class="card-header d-flex flex-column align-items-start pb-0">
-                            <canvas baseChart width="400" height="400"
-                          [type]="'line'"
-                          [data]="ChartEvents"
-                          [options]="lineChartOptions"
-                          [legend]="lineChartLegend"
-                          [plugins]="lineChartPlugins">
-                        </canvas>
+                            <div class="avatar bg-rgba-primary p-50 m-0">
+                                <div class="avatar-content">
+                                    <i class="feather icon-users text-primary font-medium-5"></i>
+                                </div>
+                            </div>
+                            <h2 class="text-bold-700 mt-1 mb-25">{{NBF}}</h2>
+                            <p class="mb-0">Total Number of Formations.</p>
+                        </div>
+                        <div class="card-content">
+                            <div id="orders-received-chart"></div>
                         </div>
                     </div>
                 </div>
                 
             </div>
             <div class="row match-height">
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <div class="card-header d-flex justify-content-between pb-0">
-                            <h4>Product Orders</h4>
-                            <div class="dropdown chart-dropdown">
-                                <button class="btn btn-sm border-0 dropdown-toggle p-0" type="button" id="dropdownItem2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Last 7 Days
-                                </button>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownItem2">
-                                    <a class="dropdown-item" href="#">Last 28 Days</a>
-                                    <a class="dropdown-item" href="#">Last Month</a>
-                                    <a class="dropdown-item" href="#">Last Year</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-content">
-                            <div class="card-body">
-                                <div id="product-order-chart" class="mb-3"></div>
-                                <div class="chart-info d-flex justify-content-between mb-1">
-                                    <div class="series-info d-flex align-items-center">
-                                        <i class="fa fa-circle-o text-bold-700 text-primary"></i>
-                                        <span class="text-bold-600 ml-50">Total</span>
-                                    </div>
-                                    <div class="product-result">
-                                        <span>23043</span>
-                                    </div>
-                                </div>
-                                <div class="chart-info d-flex justify-content-between mb-1">
-                                    <div class="series-info d-flex align-items-center">
-                                        <i class="fa fa-circle-o text-bold-700 text-warning"></i>
-                                        <span class="text-bold-600 ml-50">Pending</span>
-                                    </div>
-                                    <div class="product-result">
-                                        <span>14658</span>
-                                    </div>
-                                </div>
-                                <div class="chart-info d-flex justify-content-between mb-75">
-                                    <div class="series-info d-flex align-items-center">
-                                        <i class="fa fa-circle-o text-bold-700 text-danger"></i>
-                                        <span class="text-bold-600 ml-50">Rejected</span>
-                                    </div>
-                                    <div class="product-result">
-                                        <span>4758</span>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="card-header d-flex flex-column align-items-start pb-0">
+                            <canvas baseChart width="400" height="400"
+                          [type]="'pie'"
+                          [data]="PieChart"
+                          [options]="pieChartOptions"
+                          [legend]="lineChartLegend"
+                          [plugins]="lineChartPlugins">
+                        </canvas>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-4 col-md-4 col-12">
                     <div class="card">
-                        <div class="card-header d-flex justify-content-between align-items-start">
-                            <div>
-                                <h4 class="card-title">Sales Stats</h4>
-                                <p class="text-muted mt-25 mb-0">Last 6 months</p>
-                            </div>
-                            <p class="mb-0"><i class="feather icon-more-vertical font-medium-3 text-muted cursor-pointer"></i></p>
-                        </div>
-                        <div class="card-content">
-                            <div class="card-body px-0">
-                                <div id="sales-chart"></div>
-                            </div>
+                        <div class="card-header d-flex flex-column align-items-start pb-0">
+                            <canvas baseChart width="400" height="400"
+                          [type]="'radar'"
+                          [data]="RadarChart"
+                          [options]="radarChartOptions"
+                          [legend]="lineChartLegend"
+                          [plugins]="lineChartPlugins" >
+                        </canvas>
                         </div>
                     </div>
                 </div>
-                
+                <div class="col-lg-4 col-md-4 col-12">
+                    <div class="card">
+                        <div class="card-header d-flex flex-column align-items-start pb-0">
+                            <canvas baseChart width="400" height="400"
+                          [type]="'bar'"
+                          [data]="BarChart"
+                          [options]="barChartOptions"
+                          [legend]="lineChartLegend"
+                          [plugins]="lineChartPlugins">
+                        </canvas>
+                        </div>
+                    </div>
+                </div>
             </div>
            
 </div>
