--- a/src/app/BackEnd/Events/updateeventlist/updateeventlist.component.html
+++ b/src/app/BackEnd/Events/updateeventlist/updateeventlist.component.html
@@ -130,7 +130,7 @@
                         <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                             colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
                             style="width: 92.6833px;">
-                            <button class="btn btn-warning" [routerLink]="['/UpdateEvent',x.id]"><i class="feather icon-edit d-flex justify-content-center"></i></button>
+                            <button class="btn btn-warning" [routerLink]="['/Dashboard/UpdateEvent/',x.id]"><i class="feather icon-edit d-flex justify-content-center"></i></button>
                              </td >
                              <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
                              colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
