--- a/src/app/BackEnd/Events/show-users-events/show-users-events.component.css
+++ b/src/app/BackEnd/Events/show-users-events/show-users-events.component.css
@@ -1,8 +1,3 @@
-.knowledge-base-bg {
-    background: url(/assets/Images/Evenements/UserJoined.jpg) no-repeat;
-      background-size: auto;
-    background-size: cover;
-}
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
 
 h1 {
@@ -15,12 +10,15 @@ h1 {
   top: 58%;
   margin-left: -20px;
 }
+button{
+  width:20%;
+}
+
 
 .body {
   position: absolute;
-  top: 50%;
   margin-left: -50px;
-  left: 50%;
+  left: 42%;
   animation: speeder 0.4s linear infinite;
 }
 .body > span {
@@ -251,4 +249,972 @@ h1 {
     left: -100%;
     opacity: 0;
   }
+}
+*{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+body{
+  font-family: Helvetica;
+  -webkit-font-smoothing: antialiased;
+  background: rgba( 71, 147, 227, 1);
+}
+h2{
+  margin-top: auto;
+  text-align: center;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #21aba5;
+  padding: 113px 0;
+}
+
+/* Table Styles */
+
+.table-wrapper{
+  /*margin: 10px 70px 70px;*/
+  margin: 0 5% 0 20% ;
+  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+}
+
+.fl-table {
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: normal;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  /*max-width: 83%;*/
+  white-space: nowrap;
+  background-color: white;
+  margin-left: 0px;
+}
+
+.fl-table td, .fl-table th {
+  text-align: center;
+  padding: 8px;
+}
+
+.fl-table td {
+  border-right: 1px solid #f8f8f8;
+  font-size: 12px;
+}
+
+.fl-table thead th {
+  color: #ffffff;
+  background: #4FC3A1;
+}
+
+
+.fl-table thead th:nth-child(odd) {
+  color: #ffffff;
+  background: #324960;
+}
+
+.fl-table tr:nth-child(even) {
+  background: #F8F8F8;
+}
+
+/* Responsive */
+
+@media (max-width: 767px) {
+  .fl-table {
+      display: block;
+      width: 100%;
+  }
+  .table-wrapper:before{
+      content: "Scroll horizontally >";
+      display: block;
+      text-align: right;
+      font-size: 11px;
+      color: white;
+      padding: 0 0 10px;
+  }
+  .fl-table thead, .fl-table tbody, .fl-table thead th {
+      display: block;
+  }
+  .fl-table thead th:last-child{
+      border-bottom: none;
+  }
+  .fl-table thead {
+      float: left;
+  }
+  .fl-table tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+  }
+  .fl-table td, .fl-table th {
+      padding: 20px .625em .625em .625em;
+      height: 60px;
+      vertical-align: middle;
+      box-sizing: border-box;
+      overflow-x: hidden;
+      overflow-y: auto;
+      width: 120px;
+      font-size: 13px;
+      text-overflow: ellipsis;
+  }
+  .fl-table thead th {
+      text-align: left;
+      border-bottom: 1px solid #f7f7f9;
+  }
+  .fl-table tbody tr {
+      display: table-cell;
+  }
+  .fl-table tbody tr:nth-child(odd) {
+      background: none;
+  }
+  .fl-table tr:nth-child(even) {
+      background: transparent;
+  }
+  .fl-table tr td:nth-child(odd) {
+      background: #F8F8F8;
+      border-right: 1px solid #E6E4E4;
+  }
+  .fl-table tr td:nth-child(even) {
+      border-right: 1px solid #E6E4E4;
+  }
+  .fl-table tbody td {
+      display: block;
+      text-align: center;
+  }
+}
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+/* default */
+*,
+*::after,
+*::before {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+/* body */
+body {
+min-height: 100vh;
+padding: 40px;
+
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+
+background: hsl(220, 10%, 12%);
+font-family: "Lato", "Segoe Ui", -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+/* .flip-card-container */
+.flip-card-container {
+--hue: 150;
+--primary: hsl(var(--hue), 50%, 50%);
+--white-1: hsl(0, 0%, 90%);
+--white-2: hsl(0, 0%, 80%);
+--dark: hsl(var(--hue), 25%, 10%);
+--grey: hsl(0, 0%, 50%);
+
+width: 310px;
+height: 500px;
+margin: 40px;
+
+perspective: 1000px;
+}
+
+/* .flip-card */
+.flip-card {
+width: inherit;
+height: inherit;
+
+position: relative;
+transform-style: preserve-3d;
+transition: .6s .1s;
+}
+
+/* hover and focus-within states */
+.flip-card-container:hover .flip-card,
+.flip-card-container:focus-within .flip-card {
+transform: rotateY(180deg);
+}
+
+/* .card-... */
+.card-front,
+.card-back {
+width: 100%;
+height: 100%;
+border-radius: 24px;
+
+background: var(--dark);
+position: absolute;
+top: 0;
+left: 0;
+overflow: hidden;
+
+backface-visibility: hidden;
+
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+/* .card-front */
+.card-front {
+transform: rotateY(0deg);
+z-index: 2;
+}
+
+/* .card-back */
+.card-back {
+transform: rotateY(180deg);
+z-index: 1;
+}
+
+/* figure */
+figure {
+z-index: -1;
+}
+
+/* figure, .img-bg */
+figure,
+.img-bg {
+position: absolute;
+top: 0;
+left: 0;
+
+width: 100%;
+height: 100%;
+}
+
+/* img */
+img {
+height: 100%;
+border-radius: 24px;
+}
+
+/* figcaption */
+figcaption {
+display: block;
+
+width: auto;
+margin-top: 12%;
+padding: 8px 22px;
+
+font-weight: bold;
+line-height: 1.6;
+letter-spacing: 2px;
+word-spacing: 6px;
+text-align: right;
+
+position: absolute;
+top: 0;
+right: 12px;
+
+color: var(--white-1);
+background: hsla(var(--hue), 25%, 10%, .5);
+}
+
+/* .img-bg */
+.img-bg {
+background: hsla(var(--hue), 25%, 10%, .5);
+}
+
+.card-front .img-bg {
+clip-path: polygon(0 20%, 100% 40%, 100% 100%, 0 100%);
+}
+
+.card-front .img-bg::before {
+content: "";
+
+position: absolute;
+top: 34%;
+left: 50%;
+transform: translate(-50%, -50%) rotate(18deg);
+
+width: 100%;
+height: 6px;
+border: 1px solid var(--primary);
+border-left-color: transparent;
+border-right-color: transparent;
+
+transition: .1s;
+}
+
+.card-back .img-bg {
+clip-path: polygon(0 0, 100% 0, 100% 80%, 0 60%);
+}
+
+/* hover state */
+.flip-card-container:hover .card-front .img-bg::before {
+width: 6px;
+border-left-color: var(--primary);
+border-right-color: var(--primary);
+}
+
+/* ul */
+ul {
+padding-top: 50%;
+margin: 0 auto;
+width: 70%;
+height: 100%;
+
+list-style: none;
+color: var(--white-1);
+
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+
+/* li */
+li {
+width: 100%;
+margin-top: 12px;
+padding-bottom: 12px;
+
+font-size: 14px;
+text-align: center;
+
+position: relative;
+}
+
+li:nth-child(2n) {
+color: var(--white-2);
+}
+
+li:not(:last-child)::after {
+content: "";
+
+position: absolute;
+bottom: 0;
+left: 0;
+
+width: 100%;
+height: 1px;
+
+background: currentColor;
+opacity: .2;
+}
+
+/* button */
+button {
+font-family: inherit;
+font-weight: bold;
+color: var(--white-1);
+
+letter-spacing: 2px;
+
+padding: 9px 20px;
+border: 1px solid var(--grey);
+border-radius: 1000px;
+background: transparent;
+transition: .3s;
+
+cursor: pointer;
+}
+
+button:hover,
+button:focus {
+color: var(--primary);
+background: hsla(var(--hue), 25%, 10%, .2);
+border-color: currentColor;
+}
+
+button:active {
+transform: translate(2px);
+}
+
+/* .design-container */
+.design-container {
+--tr: 90;
+--op: .5;
+
+width: 100%;
+height: 100%;
+
+background: transparent;
+position: absolute;
+top: 0;
+left: 0;
+
+pointer-events: none;
+}
+
+/* .design */
+.design {
+display: block;
+
+background: var(--grey);
+position: absolute;
+
+opacity: var(--op);
+transition: .3s;
+}
+
+.design--1,
+.design--2,
+.design--3,
+.design--4 {
+width: 1px;
+height: 100%;
+}
+
+.design--1,
+.design--2 {
+top: 0;
+transform: translateY(calc((var(--tr) - (var(--tr) * 2)) * 1%))
+}
+
+.design--1 {
+left: 20%;
+}
+
+.design--2 {
+left: 80%;
+}
+
+.design--3,
+.design--4 {
+bottom: 0;
+transform: translateY(calc((var(--tr) + (var(--tr) - var(--tr))) * 1%))
+}
+
+.design--3 {
+left: 24%;
+}
+
+.design--4 {
+left: 76%;
+}
+
+.design--5,
+.design--6,
+.design--7,
+.design--8 {
+width: 100%;
+height: 1px;
+}
+
+.design--5,
+.design--6 {
+left: 0;
+transform: translateX(calc((var(--tr) - (var(--tr) * 2)) * 1%));
+}
+
+.design--5 {
+top: 41%;
+}
+
+.design--6 {
+top: 59%;
+}
+
+.design--7,
+.design--8 {
+right: 0;
+transform: translateX(calc((var(--tr) + (var(--tr) - var(--tr))) * 1%))
+}
+
+.design--7 {
+top: 44%;
+}
+
+.design--8 {
+top: 56%;
+}
+
+/* states */
+button:hover+.design-container,
+button:active+.design-container,
+button:focus+.design-container {
+--tr: 20;
+--op: .7;
+}
+
+.abs-site-link {
+position: fixed;
+bottom: 20px;
+left: 20px;
+color: hsla(0, 0%, 100%, .6);
+font-size: 16px;
+font-family: 'Segoe UI', -apple-system, BlinkMacSystemFont, sans-serif;
+}
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
+
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+box-sizing: border-box;
+font-family: 'Montserrat', sans-serif;
+}
+body {
+font-family: 'Montserrat', sans-serif;
+background-color: #fbeee3;
+}
+.top_part
+{
+width:100%;
+height:400px;
+background-color: rgba(238, 238, 238, 0.008);
+
+background-position: center;
+position: relative;
+}
+.overlay
+{
+position: sticky !important;
+width: 100%;
+height: 100%;
+/* background-image: url('../../../assets/wll.jpg'); */
+background-color: rgba(0,0,0,0.6);
+z-index: 2;
+
+}
+.filter_part
+{
+width: 60%;
+  position: absolute;
+  top: 150px;
+  height: 200px;
+  background-color: rgb(252, 252, 252);
+  box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 4px 8px 0 rgb(26 26 26 / 12%);
+  right: 300px;
+  padding: 30px;
+  z-index: 10;
+  border-radius: 5px;
+}
+.container {
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+margin: 200px auto 100px auto;;
+width: 1040px;
+max-width: 1500px;
+height: 500px;
+/*background-color: aquamarine;*/
+}
+.carousel {
+display: flex;
+flex-direction: column;
+background-color: white;
+width: 430px;
+max-width: 350px;
+margin:20px 30px;
+height:470px;
+border-radius: 8px;
+
+}
+.carousel_content
+{
+display: flex;
+flex-direction: column;
+height:40%;
+padding: 15px;
+background-color: #eee;
+border-radius:8px;
+}
+.carousel_content h3
+{
+font-weight: 700;
+}
+.carousel_img{
+ width: 100%;
+ height: 55%;
+ border-radius: 3% 3% 0 0;
+ /* background-image: url('../../../assets/wll.jpg'); */
+ background-position: center;
+
+}
+.partie_louta
+{
+display: flex;
+align-items: baseline;
+justify-content: space-between;
+margin:30px 0 20px 0 ;
+}
+.categ_sel
+{
+border: none;
+width: 30%;
+height: 45px;
+font-size: 15px;
+background-color: #eee;
+border-bottom: 1px solid rgb(30, 169, 118);
+border: 2px;
+position:relative;
+border-radius: 2px;
+}
+.recherche
+{
+border: none;
+width: 30%;
+height: 45px;
+font-size: 15px;
+background-color: #eee;
+border-bottom: 1px solid rgb(30, 169, 118);
+border: 2px;
+margin: 29px 10px;
+border-radius: 2px;
+padding:10px;
+}
+.submit_bt
+{
+border:none;
+background-color: #27ada7;
+padding: 7px 35px;
+font-size: 18px;
+position:absolute;
+top: 74px;
+border-radius: 2px;
+font-weight: 400;
+color:white;
+margin-top: -14px;
+}
+/* From uiverse.io by @nikk7007 */
+button {
+padding: 0.8em 1.8em;
+border: 0px solid #17C3B2;
+position: relative;
+overflow: hidden;
+background-color: transparent;
+text-align: center;
+text-transform: uppercase;
+font-size: 16px;
+transition: .3s;
+z-index: 1;
+font-family: inherit;
+color: #17C3B2;
+}
+
+button::before {
+content: '';
+width: 0;
+height: 300%;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%) rotate(45deg);
+background: #17C3B2;
+transition: .5s ease;
+display: block;
+z-index: -1;
+}
+
+button:hover::before {
+width: 105%;
+}
+
+button:hover {
+color: #111;
+}
+
+/* From uiverse.io by @nikk7007 */
+button {
+padding: 0.8em 1.8em;
+
+position: relative;
+overflow: hidden;
+background-color: transparent;
+text-align: center;
+text-transform: uppercase;
+font-size: 16px;
+transition: .3s;
+z-index: 1;
+font-family: inherit;
+color: #17C3B2;
+}
+
+button::before {
+content: '';
+width: 0;
+height: 300%;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%) rotate(45deg);
+background: #17C3B2;
+transition: .5s ease;
+display: block;
+z-index: -1;
+}
+
+button:hover::before {
+width: 105%;
+}
+
+button:hover {
+color: #111;
+}
+
+.box{
+background-color: #21ABA5;
+    color: white;
+    padding: 10px;
+    width: 234px;
+    border: none;
+    font-size: 10px;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+    -webkit-appearance: button;
+    appearance: button;
+    outline: none;
+    margin-left: 301px;
+}
+.knowledge-base-bg {
+  background: url(/assets/Images/Evenements/UserLikes.jpg) no-repeat;
+    background-size: auto;
+  background-size: cover;
+}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
+
+h1 {
+position: absolute;
+font-family: "Open Sans";
+font-weight: 600;
+font-size: 12px;
+text-transform: uppercase;
+left: 50%;
+top: 58%;
+margin-left: -20px;
+}
+
+.body {
+position: absolute;
+top: 50%;
+margin-left: -50px;
+left: 50%;
+animation: speeder 0.4s linear infinite;
+}
+.body > span {
+height: 5px;
+width: 35px;
+background: #1fb79b;
+position: absolute;
+top: -19px;
+left: 60px;
+border-radius: 2px 10px 1px 0;
+}
+
+.base span {
+position: absolute;
+width: 0;
+height: 0;
+border-top: 6px solid transparent;
+border-right: 100px solid #1fb79b;
+border-bottom: 6px solid transparent;
+}
+.base span:before {
+content: "";
+height: 22px;
+width: 22px;
+border-radius: 50%;
+background: #1fb79b;
+position: absolute;
+right: -110px;
+top: -16px;
+}
+.base span:after {
+content: "";
+position: absolute;
+width: 0;
+height: 0;
+border-top: 0 solid transparent;
+border-right: 55px solid #1fb79b;
+border-bottom: 16px solid transparent;
+top: -16px;
+right: -98px;
+}
+
+.face {
+position: absolute;
+height: 12px;
+width: 20px;
+background: #1fb79b;
+border-radius: 20px 20px 0 0;
+transform: rotate(-40deg);
+right: -125px;
+top: -15px;
+}
+.face:after {
+content: "";
+height: 12px;
+width: 12px;
+background: #1fb79b;
+right: 4px;
+top: 7px;
+position: absolute;
+transform: rotate(40deg);
+transform-origin: 50% 50%;
+border-radius: 0 0 0 2px;
+}
+
+.body > span > span:nth-child(1),
+.body > span > span:nth-child(2),
+.body > span > span:nth-child(3),
+.body > span > span:nth-child(4) {
+width: 30px;
+height: 1px;
+background: #1fb79b;
+position: absolute;
+animation: fazer1 0.2s linear infinite;
+}
+
+.body > span > span:nth-child(2) {
+top: 3px;
+animation: fazer2 0.4s linear infinite;
+}
+
+.body > span > span:nth-child(3) {
+top: 1px;
+animation: fazer3 0.4s linear infinite;
+animation-delay: -1s;
+}
+
+.body > span > span:nth-child(4) {
+top: 4px;
+animation: fazer4 1s linear infinite;
+animation-delay: -1s;
+}
+
+@keyframes fazer1 {
+0% {
+  left: 0;
+}
+100% {
+  left: -80px;
+  opacity: 0;
+}
+}
+@keyframes fazer2 {
+0% {
+  left: 0;
+}
+100% {
+  left: -100px;
+  opacity: 0;
+}
+}
+@keyframes fazer3 {
+0% {
+  left: 0;
+}
+100% {
+  left: -50px;
+  opacity: 0;
+}
+}
+@keyframes fazer4 {
+0% {
+  left: 0;
+}
+100% {
+  left: -150px;
+  opacity: 0;
+}
+}
+@keyframes speeder {
+0% {
+  transform: translate(2px, 1px) rotate(0deg);
+}
+10% {
+  transform: translate(-1px, -3px) rotate(-1deg);
+}
+20% {
+  transform: translate(-2px, 0px) rotate(1deg);
+}
+30% {
+  transform: translate(1px, 2px) rotate(0deg);
+}
+40% {
+  transform: translate(1px, -1px) rotate(1deg);
+}
+50% {
+  transform: translate(-1px, 3px) rotate(-1deg);
+}
+60% {
+  transform: translate(-1px, 1px) rotate(0deg);
+}
+70% {
+  transform: translate(3px, 1px) rotate(-1deg);
+}
+80% {
+  transform: translate(-2px, -1px) rotate(1deg);
+}
+90% {
+  transform: translate(2px, 1px) rotate(0deg);
+}
+100% {
+  transform: translate(1px, -2px) rotate(-1deg);
+}
+}
+.longfazers {
+position: absolute;
+width: 100%;
+height: 100%;
+}
+.longfazers span {
+position: absolute;
+height: 2px;
+width: 20%;
+background: #000;
+}
+.longfazers span:nth-child(1) {
+top: 20%;
+animation: lf 0.6s linear infinite;
+animation-delay: -5s;
+}
+.longfazers span:nth-child(2) {
+top: 40%;
+animation: lf2 0.8s linear infinite;
+animation-delay: -1s;
+}
+.longfazers span:nth-child(3) {
+top: 60%;
+animation: lf3 0.6s linear infinite;
+}
+.longfazers span:nth-child(4) {
+top: 80%;
+animation: lf4 0.5s linear infinite;
+animation-delay: -3s;
+}
+
+@keyframes lf {
+0% {
+  left: 200%;
+}
+100% {
+  left: -200%;
+  opacity: 0;
+}
+}
+@keyframes lf2 {
+0% {
+  left: 200%;
+}
+100% {
+  left: -200%;
+  opacity: 0;
+}
+}
+@keyframes lf3 {
+0% {
+  left: 200%;
+}
+100% {
+  left: -100%;
+  opacity: 0;
+}
+}
+@keyframes lf4 {
+0% {
+  left: 200%;
+}
+100% {
+  left: -100%;
+  opacity: 0;
+}
 }
