--- a/src/app/BackEnd/Events/users-events/users-events.component.html
+++ b/src/app/BackEnd/Events/users-events/users-events.component.html
@@ -1,127 +1,87 @@
 <app-nav></app-nav>
-<div class="app-content content">
-    <div class="content-overlay"></div>
+  <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
-    <div class="content-wrapper">
         <div class="content-header row">
         </div>
-        <div class="content-body">  
-            <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/pages/knowledge-base.css">
-            <section id="knowledge-base-search">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="card knowledge-base-bg black" >
-                            <div class="card-content">
-                                <div class="card-body p-sm-4 p-2">
-                                    <h1 class="white">Welcome to The Users Events Section</h1>
-                                    <p class="card-text mb-2">
-                                        You can find below the All The Users .
-                                    </p>
-                                </div>
-                            </div>
+            <div>
+                <div class="top_part">
+                        <h2>Users List</h2>
+                    <div class="filter_part">
+                        <div class="filter_caat">
+                            <!--[(ngModel)]="searchText" -->
+                            <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Search..."
+                            [(ngModel)]="filterTerm"
+                          /> 
                         </div>
                     </div>
                 </div>
-            </section>  
-            <div class="col-lg-12">
-                <input
-                type="text"
-                class="form-control"
-                placeholder="Search..."
-                [(ngModel)]="filterTerm"
-              />   
-            <div *ngIf="showLoader"><!-- so this div containing img will be dislpayed only when the showLoader is equal to true-->
-                <div class='body' style="background-color: #1fb79b;">
-                    <span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                    </span>
-                    <div class='base'>
-                      <span></span>
-                      <div class='face'></div>
-                    </div>
-                  </div>
-                  <div class='longfazers'>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                  </div>
-                  <h1>Loading Events</h1>
-                  
-            </div> 
-<section _ngcontent-nwj-c61="" class="data-list-view-header">
-    <div _ngcontent-nwj-c61="" class="table-responsive">
-        <div _ngcontent-nwj-c61="" id="DataTables_Table_0_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
-            <table _ngcontent-nwj-c61="" id="DataTables_Table_0" role="grid"
-                class="table data-list-view dataTable no-footer dt-checkboxes-select">
-                <thead _ngcontent-nwj-c61="">
-                    <tr _ngcontent-nwj-c61="" role="row">
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" data-col="0" aria-label=""
-                            class="dt-checkboxes-cell dt-checkboxes-select-all sorting_disabled"
-                            style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">FirstName</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
-                            style="width: 144.667px;">Name</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">EmailAddress</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">UserName</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">PhoneNumber</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                            style="width: 92.6833px;">Manage</th>
-                       
-                    </tr>
-                </thead>
-                
-                <tbody _ngcontent-nwj-c61="">
-                    <tr _ngcontent-nwj-c61="" role="row" *ngFor="let x of listusers | filter: filterTerm;">
-                        <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" data-col="0" aria-label=""
-                            class="dt-checkboxes-cell dt-checkboxes-select-all sorting_disabled"
-                            style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></td>
-                        <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">{{x.firstname}}</td >
-                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateStart: activate to sort column ascending" class="sorting"
-                            style="width: 144.667px;">{{x.name}}</td >
-                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">{{x.emailAddress}}</td >
-                            <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">{{x.username}}</td >
-                            <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="dateEnd: activate to sort column ascending" class="sorting"
-                            style="width: 169.017px;">{{x.phoneNumber}}</td >
-                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                            style="width: 92.6833px;">
-                            <button class="btn btn-warning" [routerLink]="['/Dashboard/ShowUserEvents',x.idUser]"><i class="feather icon-settings d-flex justify-content-center"></i></button>
-                             </td >
-                   
-                    </tr>
-                   
-                </tbody>
-            </table>
-            <div _ngcontent-nwj-c61="" class="bottom">
-                <div _ngcontent-nwj-c61="" class="actions"></div>
-            </div>
-        </div>
-    </div>
-</section>
-  
+            
+                <div class="table-wrapper">
+                    <table class="fl-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">FirstName</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">EmailAddress</th>
+                                <th scope="col">Username</th>
+                                <th scope="col">PhoneNumber</th>
+                                <th scope="col">Manage</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <div *ngIf="showLoader"><!-- so this div containing img will be dislpayed only when the showLoader is equal to true-->
+                                <div class='body' style="background-color: #1fb79b;">
+                                    <span>
+                                      <span></span>
+                                      <span></span>
+                                      <span></span>
+                                      <span></span>
+                                    </span>
+                                    <div class='base'>
+                                      <span></span>
+                                      <div class='face'></div>
+                                    </div>
+                                  </div>
+                                  <div class='longfazers'>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                  </div>
+                                  <h1>Loading Badges</h1>
+                                  
+                            </div>
+                           
+                            <tr *ngFor="let o of listusers | paginate: { itemsPerPage: 4, currentPage: pages } | filter:filterTerm">
+                                <!--| filter:searchText-->
+                                <td>
+                                    {{o.firstname}}
+                                </td>
+                                <td>
+                                    {{o.name}}
+                                </td>
+                                <td>
+                                    {{o.emailAddress}}
+                                </td>
+                                <td>
+                                    {{o.username}}
+                                </td>
+                                <td>
+                                    {{o.phoneNumber}}
+                                </td>
+                                <td>
+                                <button class="btn btn-outline-danger mr-2"[routerLink]="['/Dashboard/ShowUserEvents/',o.idUser]"><i class="feather icon-edit d-flex justify-content-center"></i></button>
+                                </td>
+                                
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <pagination-controls (pageChange)="pages = $event" style="text-align: center;padding: 10px;border: 1px solid black;padding: 10px;">
+                </pagination-controls>
+
 </div>
-</div>
+
