--- a/src/app/BackEnd/badges/show-user-badges/show-user-badges.component.html
+++ b/src/app/BackEnd/badges/show-user-badges/show-user-badges.component.html
@@ -1,119 +1,88 @@
 <app-nav></app-nav>
-<div class="app-content content">
-    <div class="content-overlay"></div>
+  <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
-    <div class="content-wrapper">
         <div class="content-header row">
         </div>
-        <div class="content-body">  
-            <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/pages/knowledge-base.css">
-            <section id="knowledge-base-search">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="card knowledge-base-bg black" >
-                            <div class="card-content">
-                                <div class="card-body p-sm-4 p-2">
-                                    <h1 class="black">Welcome to The Show Users Badges Section</h1>
-                                    <p class="card-text mb-2">
-                                        You can find below the All The Users Badges.
-                                    </p>
-                                </div>
-                            </div>
+            <div>
+                <div class="top_part">
+                        <h2>Users's Badges List</h2>
+                    <div class="filter_part">
+                        <div class="filter_caat">
+                            <!--[(ngModel)]="searchText" -->
+                            <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Search..."
+                            [(ngModel)]="filterTerm"
+                          /> 
                         </div>
-                    </div>
-                </div>
-            </section>  
-            <div class="col-lg-12">
-                <input
-                type="text"
-                class="form-control"
-                placeholder="Search..."
-                [(ngModel)]="filterTerm"
-              />   
-           
-<section _ngcontent-nwj-c61="" class="data-list-view-header">
-    <div _ngcontent-nwj-c61="" class="table-responsive">
-        <div _ngcontent-nwj-c61="" id="DataTables_Table_0_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
-            <table _ngcontent-nwj-c61="" id="DataTables_Table_0" role="grid"
-                class="table data-list-view dataTable no-footer dt-checkboxes-select">
-                <thead _ngcontent-nwj-c61="">
-                    <tr _ngcontent-nwj-c61="" role="row">
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" data-col="0" aria-label=""
-                            class="dt-checkboxes-cell dt-checkboxes-select-all sorting_disabled"
-                            style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">Title</th>
-                        <th _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                            style="width: 92.6833px;">Manage</th>
-                       
-                    </tr>
-                </thead>
-                
-                <tbody _ngcontent-nwj-c61="">
-                    <tr _ngcontent-nwj-c61="" role="row" *ngFor="let x of listuserbadges | filter: filterTerm;">
-                        <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" data-col="0" aria-label=""
-                            class="dt-checkboxes-cell dt-checkboxes-select-all sorting_disabled"
-                            style="width: 52.65px;"><input _ngcontent-nwj-c61="" type="checkbox"></td>
-                        <td _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="title: activate to sort column ascending" class="sorting"
-                            style="width: 162.917px;">{{x.title}}</td >
-                        <td  _ngcontent-nwj-c61="" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1"
-                            colspan="1" aria-label="ACTION: activate to sort column ascending" class="sorting"
-                            style="width: 92.6833px;">
-                            <button class="btn btn-danger" (click)="Remove(x.id)"><i class="feather icon-trash d-flex justify-content-center"></i></button>
-                             </td >
-                   
-                    </tr>
-                   
-                </tbody>
-            </table>
-           
-            <div _ngcontent-nwj-c61="" class="bottom">
-                <div _ngcontent-nwj-c61="" class="actions"></div>
-            </div>
-            
-        </div>
-        
-    </div>
-    
-</section>
-
-<button class="btn btn-success col-lg-1" (click)="Show(!show)"><i class="feather icon-plus-square d-flex justify-content-center"></i></button>
+                        <button class="btn btn btn-outline-danger mr-2" (click)="Show(!show)">Affect Badge </button>
 <div *ngIf="show" class="select">
     <p>Note: User Must have Enought Points to affect </p><div class="row">
         
  
         <a *ngFor="let x of listbadges| filter: filterTerm;" ><b (click)='SelectBadge(x.id)'>{{x.title}} (Costs {{x.cost}}) Points</b></a>
    
-    <button class="btn btn-success col-lg-1" (click)="Affect()"><i class="feather icon-check-circle d-flex justify-content-center"></i></button>
+    <button class="btn btn-outline-danger mr-2" (click)="Affect()"><i class="feather icon-check-circle d-flex justify-content-center"></i></button>
     </div>
 </div>
-<div *ngIf="showLoader"><!-- so this div containing img will be dislpayed only when the showLoader is equal to true-->
-    <div class='body' style="background-color: #1fb79b;">
-        <span>
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-        <div class='base'>
-          <span></span>
-          <div class='face'></div>
-        </div>
-      </div>
-      <div class='longfazers'>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <h1>Loading Events</h1>
-      
-</div> 
-</div>
+                    </div>
+                    
+                </div>
+            
+                <div class="table-wrapper">
+                    <table class="fl-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Title</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Manage</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <div *ngIf="showLoader"><!-- so this div containing img will be dislpayed only when the showLoader is equal to true-->
+                                <div class='body' style="background-color: #1fb79b;">
+                                    <span>
+                                      <span></span>
+                                      <span></span>
+                                      <span></span>
+                                      <span></span>
+                                    </span>
+                                    <div class='base'>
+                                      <span></span>
+                                      <div class='face'></div>
+                                    </div>
+                                  </div>
+                                  <div class='longfazers'>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                  </div>
+                                  <h1>Loading Badges</h1>
+                                  
+                            </div>
+                           
+                            <tr *ngFor="let o of listuserbadges | paginate: { itemsPerPage: 4, currentPage: pages } | filter:filterTerm">
+                                <!--| filter:searchText-->
+                                <td>
+                                    {{o.title}}
+                                </td>
+                                <td>
+                                    {{o.description}}
+                                </td>
+                                <td>
+                                <button class="btn btn-outline-danger mr-2" (click)="Remove(o.id)"><i class="feather icon-trash d-flex justify-content-center"></i></button>
+                                </td>
+                                
+                            </tr>
+                        </tbody>
+                    </table>
+                    
+                </div>
+                
+                <pagination-controls (pageChange)="pages = $event" style="text-align: center;padding: 10px;border: 1px solid black;padding: 10px;">
+                </pagination-controls>
 
 </div>
+
