--- a/src/app/Components/Evenements/evenements/evenements.component.html
+++ b/src/app/Components/Evenements/evenements/evenements.component.html
@@ -39,19 +39,11 @@
                             placeholder="Search..."
                             [(ngModel)]="filterTerm"
                           />
-                                                 <div class="recent-folio-menu">
-                                 <ul>
-                                                                     
-                                                                                                         <li class="filter active" data-filter=".bridge">Events</li>
-
-                          
-                                                                     
-                                                               </ul>
-                              </div>
+                                          
                                           </div>
                           </div> 
                          
-                       <div class="elementor-container elementor-column-gap-default">
+                       <div class="elementor elementor-column-gap-default">
                            
                             <div class="elementor-row">
                                
@@ -84,7 +76,7 @@
                               <h1>Loading Events</h1>
                               
                         </div>            
-                              <div class="col-md-4" *ngFor="let x of listevenements | filter: filterTerm;">
+                              <div class="col-md-3" *ngFor="let x of listevenements| paginate: { itemsPerPage: 4, currentPage: pages }  | filter: filterTerm;">
                         <div class="single-latest-news">
                                                         <div class="latest-news-img">
                                  <a href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-3/">
@@ -132,5 +124,7 @@
 
     </div>
 </div>
+<pagination-controls (pageChange)="pages = $event" style="text-align: center;padding: 10px;border: 1px solid black;padding: 10px;">
+</pagination-controls>
 <app-footer></app-footer>
 <app-scripts></app-scripts>
