--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-2">
                     <!--  <a class="nav-brand" href="#"></a>-->
                     <div class="logo-area">
-                        <a class="logo" href="https://demo.themewinter.com/wp/buildbench/">
+                        <a class="logo">
                             <img class="img-fluid" src="/assets/footer_logo.png" alt="BuildBench">
                         </a>
 
@@ -49,7 +49,7 @@
                 </button>
                 
 
-	<div id="primary-nav" class="collapse navbar-collapse"><ul id="main-menu" class="navbar-nav"><li id="menu-item-159" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-159 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Home</a>
+	<div id="primary-nav" class="collapse navbar-collapse"><ul id="main-menu" class="navbar-nav"><li id="menu-item-159" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-159 nav-item dropdown"><a [routerLink]="['/']" class="nav-link dropdown-toggle" data-toggle="dropdown">Home</a>
 </li>
 <!-- <li id="menu-item-160" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-160 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Colaboration</a>
 <li id="menu-item-173" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-173 nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">NewsFeed</a> -->
